VS2005/Common/VeCADAPI/CadApi.h


//*** end of strings identifiers ************************************



typedef unsigned long VHANDLE;    // pointer to VeCAD object
typedef unsigned long VDWG;       // pointer to VeCAD drawing


//-----------------------------------------------
// Saves drawing with the 'hDwg' handle to file with filename 'szFileName'
// the filename extention defines format of the drawing to be save
// Returns: TRUE if succeed, FALSE if fail
//-----------------------------------------------
BOOL CADAPI CadFileSaveAs (VDWG hDwg, HWND hWin, LPCTSTR szFileName);


//-----------------------------------------------
// Saves drawing with the 'hDwg' handle to memory.
//   pMem - pointer memory block, if NULL then function don't write
// to memory but return number of bytes  needed to store drawing.
//   MaxSize - number of bytes allocated in pMem. If not enough
// to store drawing then the function will return 0.
// the filename extention defines format of the drawing to be save
// Returns: number of bytes written to memory or 0 if fail
// Example:
//   UINT nb = CadFileSaveMem( hDwg, 0, 0 );
//   BYTE* mem = new BYTE[nb];
//   if (CadFileSaveMem( hDwg, mem, nb ) > 0) {
//     // OK
//-----------------------------------------------
UINT CADAPI CadFileSaveMem (VDWG hDwg, HWND hWin, void* pMem, UINT MaxSize);



//-----------------------------------------------
BOOL CADAPI CadRasterize (VDWG hDwg, LPCTSTR szFileName, double Left, double Bottom, double Right, double Top, double Res);


//-----------------------------------------------
void CADAPI CadFireLoadSaveEvent (VDWG hDwg, int Mode, int Step, int Percent);



/******************************************************************************
* DRAWING PROPERTIES
* Next group of functions are used to access properties of drawing 'hDwg'
*******************************************************************************/
// object that own drawing (hDwg)
void   CADAPI CadPutOwner (VDWG hDwg, void* pObject); //, HWND hWnd);
DWORD  CADAPI CadGetOwner (VDWG hDwg);

// return a handle to window linked with VeCAD object
HWND   CADAPI CadGetWindow (VDWG hDwg);

// set a handle to window linked with VeCAD object
void   CADAPI CadPutWindow (VDWG hDwg, HWND hWnd);

// filename (current path is added if not specified)
void   CADAPI CadPutFileName (VDWG hDwg, LPCTSTR szFileName);

void   CADAPI CadGetFileName (VDWG hDwg, TCHAR* szFileName);

// filename without path
void   CADAPI CadGetShortFileName (VDWG hDwg, TCHAR* szFileName);


// drawing's extents
double CADAPI CadGetExtentXmin (VDWG hDwg);

double CADAPI CadGetExtentYmin (VDWG hDwg);

double CADAPI CadGetExtentZmin (VDWG hDwg);

double CADAPI CadGetExtentXmax (VDWG hDwg);

double CADAPI CadGetExtentYmax (VDWG hDwg);

double CADAPI CadGetExtentZmax (VDWG hDwg);

// drawing's extents at current 2D projection
double CADAPI CadGetExtentLeft  (VDWG hDwg);

double CADAPI CadGetExtentRight (VDWG hDwg);

double CADAPI CadGetExtentTop   (VDWG hDwg);

double CADAPI CadGetExtentBottom(VDWG hDwg);

void   CADAPI CadGetExtentRect  (VDWG hDwg, double* pLeft, double* pBottom, double* pRight, double* pTop);

// drawing's rectangle that fit to Vecad window
double CADAPI CadGetWinLeft    (VDWG hDwg);

double CADAPI CadGetWinRight   (VDWG hDwg);

double CADAPI CadGetWinTop     (VDWG hDwg);

double CADAPI CadGetWinBottom  (VDWG hDwg);

void   CADAPI CadGetWinRect    (VDWG hDwg, double* pLeft, double* pBottom, double* pRight, double* pTop);

// flag "Draw only current layer"
void   CADAPI CadPutDrawOnlyCurLayer (VDWG hDwg, BOOL b);

BOOL   CADAPI CadGetDrawOnlyCurLayer (VDWG hDwg);

// flag "Drawing is readonly"
void   CADAPI CadPutReadOnly (VDWG hDwg, BOOL b);

BOOL   CADAPI CadGetReadOnly (VDWG hDwg);

// flag "Drawing is changed"
void   CADAPI CadPutDirty (VDWG hDwg, BOOL b);

BOOL   CADAPI CadGetDirty (VDWG hDwg);

// drawing's extended data
void    CADAPI CadPutExData     (VDWG hDwg, void* pData, int nBytes);

int     CADAPI CadGetExDataSize (VDWG hDwg);

void    CADAPI CadGetExData     (VDWG hDwg, void* pData);

VHANDLE CADAPI CadGetExDataPtr  (VDWG hDwg);

// drawing's text info
void   CADAPI CadPutDescr     (VDWG hDwg, LPCTSTR Str, int nChars);

int    CADAPI CadGetDescrLen  (VDWG hDwg);

void   CADAPI CadGetDescr     (VDWG hDwg, TCHAR* pStr);

// flag "Show painting marker on a left top corner of a window"
void   CADAPI CadPutPaintMark (VDWG hDwg, BOOL b);

// point mode (for "simple" style)
void   CADAPI CadPutPointMode (VDWG hDwg, int mode);

int    CADAPI CadGetPointMode (VDWG hDwg);

// point size (for "simple" style)
void   CADAPI CadPutPointSize (VDWG hDwg, double size);

double CADAPI CadGetPointSize (VDWG hDwg);

// measure scale
void   CADAPI CadPutDistScale (VDWG hDwg, double Scal);

double CADAPI CadGetDistScale (VDWG hDwg);


// number of entities
int CADAPI CadGetNumEntities (VDWG hDwg);


// grid
void     CADAPI CadGridPutShow      (VDWG hDwg, BOOL bShow);

BOOL     CADAPI CadGridGetShow      (VDWG hDwg);

void     CADAPI CadGridPutSnap      (VDWG hDwg, BOOL bSnap);

BOOL     CADAPI CadGridGetSnap      (VDWG hDwg);

void     CADAPI CadGridPutSize      (VDWG hDwg, double dx, double dy, double dz);

void     CADAPI CadGridGetSize      (VDWG hDwg, double* pdx, double* pdy, double* pdz);

void     CADAPI CadGridPutBoldStep  (VDWG hDwg, int cx, int cy, int cz);

void     CADAPI CadGridGetBoldStep  (VDWG hDwg, int* pcx, int* pcy, int* pcz);

void     CADAPI CadGridPutColor     (VDWG hDwg, BOOL bBold, COLORREF Color);

COLORREF CADAPI CadGridGetColor     (VDWG hDwg, BOOL bBold);

void     CADAPI CadGridPutType      (VDWG hDwg, BOOL bBold, int Typ);

int      CADAPI CadGridGetType      (VDWG hDwg, BOOL bBold);

void     CADAPI CadGridPutLevel     (VDWG hDwg, int Level);

int      CADAPI CadGridGetLevel     (VDWG hDwg);



// Default Lineweight  
void  CADAPI CadPutLwDefault (VDWG hDwg, int Lweight);

int   CADAPI CadGetLwDefault (VDWG hDwg);

// Appropriate Scale of Lineweights display 
void  CADAPI CadPutLwScale   (VDWG hDwg, int Scal);

int   CADAPI CadGetLwScale   (VDWG hDwg);

// "Display Lineweights" mode
void  CADAPI CadPutLwDisplay (VDWG hDwg, BOOL bDisplay);

BOOL  CADAPI CadGetLwDisplay (VDWG hDwg);


// current Lineweight used to create entities
void  CADAPI CadSetCurLweight (VDWG hDwg, int Lweight);

int   CADAPI CadGetCurLweight (VDWG hDwg);


// current Color used to create entities
void  CADAPI CadSetCurColor   (VDWG hDwg, int Color);

int   CADAPI CadGetCurColor   (VDWG hDwg);


// set system cursor instead of default one (arrow)
void  CADAPI CadSetSystemCursor (VDWG hDwg, HCURSOR hCurs);


// Polar Tracking
// Turns on/off a polar tracking
void     CADAPI CadPolarPutOn     (VDWG hDwg, BOOL bOn);

BOOL     CADAPI CadPolarGetOn     (VDWG hDwg);

// Increment angle
void     CADAPI CadPolarPutInc    (VDWG hDwg, int Angle);

int      CADAPI CadPolarGetInc    (VDWG hDwg);

// Add additional angle
BOOL     CADAPI CadPolarAddAngle  (VDWG hDwg, double Angle);

// Delete additional angle
BOOL     CADAPI CadPolarDelAngle  (VDWG hDwg, int iAngle);

// Value of additional angle
double   CADAPI CadPolarGetAngle  (VDWG hDwg, int iAngle);

// Number of additional angles
int      CADAPI CadPolarGetNumAng (VDWG hDwg);

// Absolute or Relative measurement
void     CADAPI CadPolarPutAbs    (VDWG hDwg, BOOL bAbs);

BOOL     CADAPI CadPolarGetAbs    (VDWG hDwg);

// Snap distance along polar vector
void     CADAPI CadPolarPutDist   (VDWG hDwg, double Dist);

double   CADAPI CadPolarGetDist   (VDWG hDwg);

// Turns on/off a snap distance
void     CADAPI CadPolarPutDistOn (VDWG hDwg, BOOL bDist);

BOOL     CADAPI CadPolarGetDistOn (VDWG hDwg);


// Object Snap
// Turns on/off an object snap
void     CADAPI CadSnapPutOn      (VDWG hDwg, BOOL bOn);

BOOL     CADAPI CadSnapGetOn      (VDWG hDwg);

// Object snap settings
void     CADAPI CadSnapPutMode    (VDWG hDwg, int Mode);

int      CADAPI CadSnapGetMode    (VDWG hDwg);

int      CADAPI CadSnapGetIndMode (VDWG hDwg);


// Polyline mark
BOOL     CADAPI CadSetPlineMark   (VDWG hDwg, int Id, VHANDLE hEnt, double Start, double Length, COLORREF Color, int Width, BOOL bBlink);

VHANDLE  CADAPI CadAddPlineMark   (VDWG hDwg, VHANDLE hEnt, double Start, double Length);



/******************************************************************************
* WINDOW EVENTS
* This functions are used to notify CAD object about window events
* hWin - handle to window used to display drawing 'hDwg' (CAD object)
*******************************************************************************/
// on WM_CREATE
void CADAPI CadWinCreate        (VDWG hDwg, HWND hWin);

// on WM_PAINT
void CADAPI CadWinPaint         (VDWG hDwg, HWND hWin);

// Used in VECAD_OCX, CVecadCtrl::OnDraw()
void CADAPI CadWinDraw          (VDWG hDwg, HWND hWin, HDC dc, int Left, int Top, int Right, int Bottom);

// on WM_KEYDOWN
void CADAPI CadWinKeyDown       (VDWG hDwg, HWND hWin, UINT Char, UINT Flags);

// on WM_KEYUP
void CADAPI CadWinKeyUp         (VDWG hDwg, HWND hWin, UINT Char, UINT Flags);

// on WM_MOUSEMOVE
void CADAPI CadWinMouseMove     (VDWG hDwg, HWND hWin, UINT Flags, int x, int y);

// on WM_MOUSELEAVE
void CADAPI CadWinMouseLeave    (VDWG hDwg, HWND hWnd);

// on WM_MOUSEWHEEL
void CADAPI CadWinMouseWheel    (VDWG hDwg, HWND hWin, UINT Flags, int zDelta, int x, int y);

// on WM_LBUTTONDOWN
void CADAPI CadWinLButtonDown   (VDWG hDwg, HWND hWin, UINT Flags, int x, int y);

// on WM_LBUTTONUP
void CADAPI CadWinLButtonUp     (VDWG hDwg, HWND hWin, UINT Flags, int x, int y);

// on WM_LBUTTONDBLCLK
void CADAPI CadWinLButtonDblClk (VDWG hDwg, HWND hWin, UINT Flags, int x, int y);

// on WM_RBUTTONDOWN
void CADAPI CadWinRButtonDown   (VDWG hDwg, HWND hWin, UINT Flags, int x, int y);

// on WM_RBUTTONUP
void CADAPI CadWinRButtonUp     (VDWG hDwg, HWND hWin, UINT Flags, int x, int y);

// on WM_MBUTTONDOWN
void CADAPI CadWinMButtonDown   (VDWG hDwg, HWND hWin, UINT Flags, int x, int y);

// on WM_MBUTTONUP
void CADAPI CadWinMButtonUp     (VDWG hDwg, HWND hWin, UINT Flags, int x, int y);

// on WM_HSCROLL
void CADAPI CadWinHScroll       (VDWG hDwg, HWND hWin, UINT SBCode, UINT Pos);