VS2005/Common/VeCADAPI/CadApi.bas

Public Declare Function CadFileSaveAs Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal szFileName As String) As Long
Public Declare Function CadFileSaveMem Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal pMem As Any, ByVal MaxSize As Long) As Long
Public Declare Function CadRasterize Lib "vecad.dll" (ByVal hDwg As Long, ByVal szFileName As String, ByVal Left As Double, ByVal Bottom As Double, ByVal Right As Double, ByVal Top As Double, ByVal Res As Double) As Long
Public Declare Sub      CadFireLoadSaveEvent Lib "vecad.dll" (ByVal hDwg As Long, ByVal Mode As Long, ByVal Step As Long, ByVal Percent As Long)
Public Declare Sub      CadPutOwner Lib "vecad.dll" (ByVal hDwg As Long, ByVal pObject As Any)
Public Declare Function CadGetOwner Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadGetWindow Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadPutWindow Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWnd As Long)
Public Declare Sub      CadPutFileName Lib "vecad.dll" (ByVal hDwg As Long, ByVal szFileName As String)
Public Declare Sub      CadGetFileName Lib "vecad.dll" (ByVal hDwg As Long, ByVal szFileName As Any)
Public Declare Sub      CadGetShortFileName Lib "vecad.dll" (ByVal hDwg As Long, ByVal szFileName As Any)
Public Declare Function CadGetExtentXmin Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Function CadGetExtentYmin Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Function CadGetExtentZmin Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Function CadGetExtentXmax Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Function CadGetExtentYmax Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Function CadGetExtentZmax Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Function CadGetExtentLeft Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Function CadGetExtentRight Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Function CadGetExtentTop Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Function CadGetExtentBottom Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Sub      CadGetExtentRect Lib "vecad.dll" (ByVal hDwg As Long, ByVal pLeft As Long, ByVal pBottom As Long, ByVal pRight As Long, ByVal pTop As Long)
Public Declare Function CadGetWinLeft Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Function CadGetWinRight Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Function CadGetWinTop Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Function CadGetWinBottom Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Sub      CadGetWinRect Lib "vecad.dll" (ByVal hDwg As Long, ByVal pLeft As Long, ByVal pBottom As Long, ByVal pRight As Long, ByVal pTop As Long)
Public Declare Sub      CadPutDrawOnlyCurLayer Lib "vecad.dll" (ByVal hDwg As Long, ByVal b As Long)
Public Declare Function CadGetDrawOnlyCurLayer Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadPutReadOnly Lib "vecad.dll" (ByVal hDwg As Long, ByVal b As Long)
Public Declare Function CadGetReadOnly Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadPutDirty Lib "vecad.dll" (ByVal hDwg As Long, ByVal b As Long)
Public Declare Function CadGetDirty Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadPutExData Lib "vecad.dll" (ByVal hDwg As Long, ByVal pData As Any, ByVal nBytes As Long)
Public Declare Function CadGetExDataSize Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadGetExData Lib "vecad.dll" (ByVal hDwg As Long, ByVal pData As Any)
Public Declare Function CadGetExDataPtr Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadPutDescr Lib "vecad.dll" (ByVal hDwg As Long, ByVal Str As String, ByVal nChars As Long)
Public Declare Function CadGetDescrLen Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadGetDescr Lib "vecad.dll" (ByVal hDwg As Long, ByVal pStr As Any)
Public Declare Sub      CadPutPaintMark Lib "vecad.dll" (ByVal hDwg As Long, ByVal b As Long)
Public Declare Sub      CadPutPointMode Lib "vecad.dll" (ByVal hDwg As Long, ByVal mode As Long)
Public Declare Function CadGetPointMode Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadPutPointSize Lib "vecad.dll" (ByVal hDwg As Long, ByVal size As Double)
Public Declare Function CadGetPointSize Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Sub      CadPutDistScale Lib "vecad.dll" (ByVal hDwg As Long, ByVal Scal As Double)
Public Declare Function CadGetDistScale Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Function CadGetNumEntities Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadGridPutShow Lib "vecad.dll" (ByVal hDwg As Long, ByVal bShow As Long)
Public Declare Function CadGridGetShow Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadGridPutSnap Lib "vecad.dll" (ByVal hDwg As Long, ByVal bSnap As Long)
Public Declare Function CadGridGetSnap Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadGridPutSize Lib "vecad.dll" (ByVal hDwg As Long, ByVal dx As Double, ByVal dy As Double, ByVal dz As Double)
Public Declare Sub      CadGridGetSize Lib "vecad.dll" (ByVal hDwg As Long, ByVal pdx As Long, ByVal pdy As Long, ByVal pdz As Long)
Public Declare Sub      CadGridPutBoldStep Lib "vecad.dll" (ByVal hDwg As Long, ByVal cx As Long, ByVal cy As Long, ByVal cz As Long)
Public Declare Sub      CadGridGetBoldStep Lib "vecad.dll" (ByVal hDwg As Long, ByVal pcx As Long, ByVal pcy As Long, ByVal pcz As Long)
Public Declare Sub      CadGridPutColor Lib "vecad.dll" (ByVal hDwg As Long, ByVal bBold As Long, ByVal Color As Long)
Public Declare Function CadGridGetColor Lib "vecad.dll" (ByVal hDwg As Long, ByVal bBold As Long) As Long
Public Declare Sub      CadGridPutType Lib "vecad.dll" (ByVal hDwg As Long, ByVal bBold As Long, ByVal Typ As Long)
Public Declare Function CadGridGetType Lib "vecad.dll" (ByVal hDwg As Long, ByVal bBold As Long) As Long
Public Declare Sub      CadGridPutLevel Lib "vecad.dll" (ByVal hDwg As Long, ByVal Level As Long)
Public Declare Function CadGridGetLevel Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadPutLwDefault Lib "vecad.dll" (ByVal hDwg As Long, ByVal Lweight As Long)
Public Declare Function CadGetLwDefault Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadPutLwScale Lib "vecad.dll" (ByVal hDwg As Long, ByVal Scal As Long)
Public Declare Function CadGetLwScale Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadPutLwDisplay Lib "vecad.dll" (ByVal hDwg As Long, ByVal bDisplay As Long)
Public Declare Function CadGetLwDisplay Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadSetCurLweight Lib "vecad.dll" (ByVal hDwg As Long, ByVal Lweight As Long)
Public Declare Function CadGetCurLweight Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadSetCurColor Lib "vecad.dll" (ByVal hDwg As Long, ByVal Color As Long)
Public Declare Function CadGetCurColor Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadSetSystemCursor Lib "vecad.dll" (ByVal hDwg As Long, ByVal hCurs As Long)
Public Declare Sub      CadPolarPutOn Lib "vecad.dll" (ByVal hDwg As Long, ByVal bOn As Long)
Public Declare Function CadPolarGetOn Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadPolarPutInc Lib "vecad.dll" (ByVal hDwg As Long, ByVal Angle As Long)
Public Declare Function CadPolarGetInc Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadPolarAddAngle Lib "vecad.dll" (ByVal hDwg As Long, ByVal Angle As Double) As Long
Public Declare Function CadPolarDelAngle Lib "vecad.dll" (ByVal hDwg As Long, ByVal iAngle As Long) As Long
Public Declare Function CadPolarGetAngle Lib "vecad.dll" (ByVal hDwg As Long, ByVal iAngle As Long) As Double
Public Declare Function CadPolarGetNumAng Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadPolarPutAbs Lib "vecad.dll" (ByVal hDwg As Long, ByVal bAbs As Long)
Public Declare Function CadPolarGetAbs Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadPolarPutDist Lib "vecad.dll" (ByVal hDwg As Long, ByVal Dist As Double)
Public Declare Function CadPolarGetDist Lib "vecad.dll" (ByVal hDwg As Long) As Double
Public Declare Sub      CadPolarPutDistOn Lib "vecad.dll" (ByVal hDwg As Long, ByVal bDist As Long)
Public Declare Function CadPolarGetDistOn Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadSnapPutOn Lib "vecad.dll" (ByVal hDwg As Long, ByVal bOn As Long)
Public Declare Function CadSnapGetOn Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Sub      CadSnapPutMode Lib "vecad.dll" (ByVal hDwg As Long, ByVal Mode As Long)
Public Declare Function CadSnapGetMode Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadSnapGetIndMode Lib "vecad.dll" (ByVal hDwg As Long) As Long
Public Declare Function CadSetPlineMark Lib "vecad.dll" (ByVal hDwg As Long, ByVal Id As Long, ByVal hEnt As Long, ByVal Start As Double, ByVal Length As Double, ByVal Color As Long, ByVal Width As Long, ByVal bBlink As Long) As Long
Public Declare Function CadAddPlineMark Lib "vecad.dll" (ByVal hDwg As Long, ByVal hEnt As Long, ByVal Start As Double, ByVal Length As Double) As Long
Public Declare Sub      CadWinCreate Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long)
Public Declare Sub      CadWinPaint Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long)
Public Declare Sub      CadWinDraw Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal dc As Long, ByVal Left As Long, ByVal Top As Long, ByVal Right As Long, ByVal Bottom As Long)
Public Declare Sub      CadWinKeyDown Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal Char As Long, ByVal Flags As Long)
Public Declare Sub      CadWinKeyUp Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal Char As Long, ByVal Flags As Long)
Public Declare Sub      CadWinMouseMove Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal Flags As Long, ByVal x As Long, ByVal y As Long)
Public Declare Sub      CadWinMouseLeave Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWnd As Long)
Public Declare Sub      CadWinMouseWheel Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal Flags As Long, ByVal zDelta As Long, ByVal x As Long, ByVal y As Long)
Public Declare Sub      CadWinLButtonDown Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal Flags As Long, ByVal x As Long, ByVal y As Long)
Public Declare Sub      CadWinLButtonUp Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal Flags As Long, ByVal x As Long, ByVal y As Long)
Public Declare Sub      CadWinLButtonDblClk Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal Flags As Long, ByVal x As Long, ByVal y As Long)
Public Declare Sub      CadWinRButtonDown Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal Flags As Long, ByVal x As Long, ByVal y As Long)
Public Declare Sub      CadWinRButtonUp Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal Flags As Long, ByVal x As Long, ByVal y As Long)
Public Declare Sub      CadWinMButtonDown Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal Flags As Long, ByVal x As Long, ByVal y As Long)
Public Declare Sub      CadWinMButtonUp Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal Flags As Long, ByVal x As Long, ByVal y As Long)
Public Declare Sub      CadWinHScroll Lib "vecad.dll" (ByVal hDwg As Long, ByVal hWin As Long, ByVal SBCode As Long, ByVal Pos As Long)
